--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,11 @@
 		"allowJs": true,
 		"esModuleInterop": true,
 		"isolatedModules": true,
-		"types": ["node"]
+		"types": ["node"],
+		"baseUrl": "./",
+		"paths": {
+			"@/*": ["./src/*"]
+		}
 	},
 	"exclude": ["node_modules/"]
 }
