--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,7 @@
 	"compilerOptions": {
 		"target": "esnext",
 		"strict": true,
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
+		"module": "preserve",
 		"moduleDetection": "force",
 		"rootDir": ".",
 		"resolveJsonModule": true,
